# CodeContextAI

./: app.py  pyproject.toml  replit.nix
attached_assets/: ai_google_dev_gemini-api_docs_models_gemini.md  cloud_google_com_vertex-ai_generative-ai_docs_gemini-v2.md  openrouter_ai_openai_o3-mini.md  simpler-grants-gov (5).jsonl
src/: __init__.py  config.py
src/config/: __init__.py  config.py  ignore_patterns.py
src/models/: base.py  gemini.py  openrouter.py
src/services/: __init__.py  fetch_code.py  file_handler.py  file_system.py  github_extractor.py  llm_chain.py  pattern_matcher.py  repo_cloner.py
src/ui/: components.py  pages.py  state.py
